fix: button clippath

--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -1,11 +1,62 @@
-.button {
+.wrapper {
+  clip-path: polygon(
+    5.833% 0%,
+    94.167% 0%,
+    94.167% 14%,
+    97.083% 14%,
+    97.083% 26%,
+    100% 26%,
+    100% 74%,
+    97.083% 74%,
+    97.083% 86%,
+    94.167% 86%,
+    94.167% 100%,
+    5.833% 100%,
+    5.833% 86%,
+    2.917% 86%,
+    2.917% 74%,
+    0% 74%,
+    0% 26%,
+    2.917% 26%,
+    2.917% 14%,
+    5.833% 14%,
+    5.833% 0%,
+    6.667% 4%,
+    6.667% 18%,
+    3.75% 18%,
+    3.75% 30%,
+    0.833% 30%,
+    0.833% 70%,
+    3.75% 70%,
+    3.75% 82%,
+    6.667% 82%,
+    6.667% 96%,
+    93.333% 96%,
+    93.333% 82%,
+    96.25% 82%,
+    96.25% 70%,
+    99.167% 70%,
+    99.167% 30%,
+    96.25% 30%,
+    96.25% 18%,
+    93.333% 18%,
+    93.333% 4%,
+    6.667% 4%
+  );
+
   min-width: rem(120px);
   height: rem(40px);
+  position: relative;
+  background: white;
+}
+
+.button {
+  width: 100%;
+  height: 100%;
   position: relative;
   display: flex;
 
   background: var(--black);
-  border: none;
   outline: none;
   overflow: hidden;
 
@@ -13,11 +64,29 @@
     background: var(--green);
     flex: 1;
     margin: 0 auto;
-    border: rem(2.5px) solid var(--white);
-    clip-path: polygon(10% 0, 90% 0, 90% 101%, 10% 101%);
-
-    border-left: none;
-    border-right: none;
+    clip-path: polygon(
+      6.25% 16%,
+      6.25% 2%,
+      93.75% 2%,
+      93.75% 16%,
+      96.667% 16%,
+      96.667% 28%,
+      99.583% 28%,
+      99.583% 72%,
+      96.667% 72%,
+      96.667% 84%,
+      93.75% 84%,
+      93.75% 98%,
+      6.25% 98%,
+      6.25% 84%,
+      3.333% 84%,
+      3.333% 72%,
+      0.417% 72%,
+      0.417% 28%,
+      3.333% 28%,
+      3.333% 16%,
+      6.25% 16%
+    );
   }
 
   &__black {
